--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 
 
 # ecommerce/settings/local.py
-# ecommerce/aws/ignore2.py
-
+ecommerce/aws/conf.py
 .DS_STORE
 *.sublime-project
 fasttracktojquery/
